# dria-oracle-node

./: .env.example  .gitignore  Cargo.toml  Makefile  README.md
.github/workflows/: build-aws-image.yaml
contracts/: Cargo.toml
contracts/src/: addresses.rs  balance.rs  errors.rs  interfaces.rs
core/: Cargo.toml
core/src/: lib.rs  main.rs
core/src/cli/: mod.rs  parsers.rs
core/src/cli/commands/: mod.rs  registry.rs  token.rs
core/src/cli/commands/coordinator/: mod.rs  process.rs  request.rs  serve.rs  view.rs
core/src/compute/: execute.rs  handler.rs  mod.rs  nonce.rs  utils.rs
core/src/compute/generation/: execute.rs  handler.rs  request.rs  workflow.rs
core/src/compute/generation/postprocess/: swan.rs
core/src/compute/validation/: execute.rs  handler.rs  workflow.rs
core/src/configurations/: mod.rs
core/src/contracts/: addresses.rs
core/src/node/: anvil.rs  coordinator.rs  core.rs  mod.rs  registry.rs  token.rs  types.rs  utils.rs  workflows.rs
core/tests/: abi_encode_test.rs  oracle_test.rs  registry_test.rs  request_test.rs  swan_test.rs  weth_test.rs
misc/: arweave.js
src/cli/: mod.rs
src/cli/commands/: coordinator.rs  mod.rs
src/cli/commands/coordinator/: mod.rs  view.rs
src/compute/: nonce.rs
src/compute/generation/: execute.rs
src/compute/generation/postprocess/: swan.rs
src/configurations/: mod.rs
src/contracts/: addresses.rs  errors.rs
src/node/: anvil.rs  mod.rs
src/storage/: arweave.rs
storage/: Cargo.toml
storage/src/: arweave.rs  traits.rs
tests/: oracle_test.rs  request_test.rs  swan_test.rs  weth_test.rs  whitelist_test.rs
