[workspace]
resolver = "2"
members = ["core", "contracts", "storage"]
default-members = ["core"]

[workspace.package]
edition = "2021"
version = "0.2.38"
license = "Apache-2.0"
readme = "README.md"
authors = ["erhant"]

[workspace.dependencies]
# core
alloy = { version = "0.8.0", features = ["full"] }
alloy-chains = "0.1.24"
tokio = { version = "1.39.2", features = [
  "macros",
  "rt-multi-thread",
  "signal",
] }
tokio-util = "0.7.13"

# workflows
dkn-workflows = { git = "https://github.com/firstbatchxyz/dkn-compute-node" }

# errors & logging & env
env_logger = "0.11.5"
eyre = "0.6.12"
log = "0.4.22"
dotenvy = "0.15.7"

# utils
async-trait = "0.1.81"
reqwest = "0.12.5"

# serde
serde = "1.0.204"
serde_json = "1.0.122"
