[package]
name = "dria-oracle-contracts"
description = "Dria Oracle Contract Interfaces"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
alloy.workspace = true
alloy-chains.workspace = true
tokio.workspace = true
tokio-util.workspace = true
eyre.workspace = true
