[package]
name = "dria-oracle-storage"
description = "Dria Oracle External Storages"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
# arweave uploader
# NOTE: there are many unused stuff here, but everything breaks if you use the minimal set
# because Bundlr SDK is not maintained at all
bundlr-sdk = { version = "0.5.0" }

alloy.workspace = true
eyre.workspace = true
log.workspace = true

async-trait.workspace = true

reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
env_logger.workspace = true
dotenvy.workspace = true
tokio.workspace = true
